@@ -1,6 +1,5 @@
 JEDIT TO DO
 
-- <delegate escape><char><delegate end> not highlighted properly
 - XMode:
   - better error reporting
   - faster tokenizing of files
