@@ -92,7 +92,7 @@
 		<SEQ TYPE="OPERATOR">}</SEQ>
 		<SEQ TYPE="OPERATOR">{</SEQ>
 		<SEQ TYPE="NULL">.</SEQ>
-		<SEQ TYPE="OPERATOR">,</SEQ>
+		<SEQ TYPE="NULL">,</SEQ>
 		<SEQ TYPE="NULL">;</SEQ>
 		<SEQ TYPE="NULL">]</SEQ>
 		<SEQ TYPE="NULL">[</SEQ>
@@ -101,219 +101,305 @@
 
 		<!-- Keywords -->
 		<KEYWORDS>
-			<KEYWORD1>my</KEYWORD1>
-			<KEYWORD1>local</KEYWORD1>
 			<KEYWORD1>new</KEYWORD1>
 			<KEYWORD1>if</KEYWORD1>
 			<KEYWORD1>until</KEYWORD1>
 			<KEYWORD1>while</KEYWORD1>
 			<KEYWORD1>elsif</KEYWORD1>
 			<KEYWORD1>else</KEYWORD1>
-			<KEYWORD1>eval</KEYWORD1>
 			<KEYWORD1>unless</KEYWORD1>
+			<KEYWORD1>for</KEYWORD1>
 			<KEYWORD1>foreach</KEYWORD1>
-			<KEYWORD1>continue</KEYWORD1>
-			<KEYWORD1>exit</KEYWORD1>
-			<KEYWORD1>die</KEYWORD1>
-			<KEYWORD1>last</KEYWORD1>
-			<KEYWORD1>goto</KEYWORD1>
-			<KEYWORD1>next</KEYWORD1>
-			<KEYWORD1>redo</KEYWORD1>
-			<KEYWORD1>goto</KEYWORD1>
-			<KEYWORD1>return</KEYWORD1>
-			<KEYWORD1>do</KEYWORD1>
-			<KEYWORD1>sub</KEYWORD1>
-			<KEYWORD1>use</KEYWORD1>
-			<KEYWORD1>require</KEYWORD1>
-			<KEYWORD1>package</KEYWORD1>
 			<KEYWORD1>BEGIN</KEYWORD1>
 			<KEYWORD1>END</KEYWORD1>
+
+			<OPERATOR>cmp</OPERATOR>
 			<OPERATOR>eq</OPERATOR>
 			<OPERATOR>ne</OPERATOR>
+			<OPERATOR>le</OPERATOR>
+			<OPERATOR>ge</OPERATOR>
 			<OPERATOR>not</OPERATOR>
 			<OPERATOR>and</OPERATOR>
 			<OPERATOR>or</OPERATOR>
+			<OPERATOR>xor</OPERATOR>
 
-			<KEYWORD3>abs</KEYWORD3>
-			<KEYWORD3>accept</KEYWORD3>
-			<KEYWORD3>alarm</KEYWORD3>
-			<KEYWORD3>atan2</KEYWORD3>
-			<KEYWORD3>bind</KEYWORD3>
-			<KEYWORD3>binmode</KEYWORD3>
-			<KEYWORD3>bless</KEYWORD3>
-			<KEYWORD3>caller</KEYWORD3>
-			<KEYWORD3>chdir</KEYWORD3>
-			<KEYWORD3>chmod</KEYWORD3>
+			<!-- At least attempt to highlight 'x', although this misses some -->
+			<OPERATOR>x</OPERATOR>
+
+			<!--
+				The following function list was derived from the perlfunc man
+				page, Perl version 5.00503
+
+				Certain keywords have been commented out where they appear more
+				than once, and the y///, qx//, etc. functions have been removed,
+				since they would not be colorized as keywords, but with separate
+				rules.
+			-->
+
+			<!-- Functions for SCALARs or strings -->
 			<KEYWORD3>chomp</KEYWORD3>
+			<KEYWORD3>chop</KEYWORD3>
 			<KEYWORD3>chr</KEYWORD3>
-			<KEYWORD3>chroot</KEYWORD3>
-			<KEYWORD3>chown</KEYWORD3>
-			<KEYWORD3>closedir</KEYWORD3>
-			<KEYWORD3>close</KEYWORD3>
-			<KEYWORD3>connect</KEYWORD3>
-			<KEYWORD3>cos</KEYWORD3>
 			<KEYWORD3>crypt</KEYWORD3>
+			<KEYWORD3>hex</KEYWORD3>
+			<KEYWORD3>index</KEYWORD3>
+			<KEYWORD3>lc</KEYWORD3>
+			<KEYWORD3>lcfirst</KEYWORD3>
+			<KEYWORD3>length</KEYWORD3>
+			<KEYWORD3>oct</KEYWORD3>
+			<KEYWORD3>ord</KEYWORD3>
+			<KEYWORD3>pack</KEYWORD3>
+			<KEYWORD3>reverse</KEYWORD3>
+			<KEYWORD3>rindex</KEYWORD3>
+			<KEYWORD3>sprintf</KEYWORD3>
+			<KEYWORD3>substr</KEYWORD3>
+			<KEYWORD3>uc</KEYWORD3>
+			<KEYWORD3>ucfirst</KEYWORD3>
+
+			<!-- Regular expressions and pattern matching -->
+			<KEYWORD3>pos</KEYWORD3>
+			<KEYWORD3>quotemeta</KEYWORD3>
+			<KEYWORD3>split</KEYWORD3>
+			<KEYWORD3>study</KEYWORD3>
+
+			<!-- Numeric functions -->
+			<KEYWORD3>abs</KEYWORD3>
+			<KEYWORD3>atan2</KEYWORD3>
+			<KEYWORD3>cos</KEYWORD3>
+			<KEYWORD3>exp</KEYWORD3>
+			<!--<KEYWORD3>hex</KEYWORD3>-->
+			<KEYWORD3>int</KEYWORD3>
+			<KEYWORD3>log</KEYWORD3>
+			<!--<KEYWORD3>oct</KEYWORD3>-->
+			<KEYWORD3>rand</KEYWORD3>
+			<KEYWORD3>sin</KEYWORD3>
+			<KEYWORD3>sqrt</KEYWORD3>
+			<KEYWORD3>srand</KEYWORD3>
+
+			<!-- Functions for real @ARRAYs -->
+			<KEYWORD3>pop</KEYWORD3>
+			<KEYWORD3>push</KEYWORD3>
+			<KEYWORD3>shift</KEYWORD3>
+			<KEYWORD3>splice</KEYWORD3>
+			<KEYWORD3>unshift</KEYWORD3>
+
+			<!-- Functions for list data -->
+			<KEYWORD3>grep</KEYWORD3>
+			<KEYWORD3>join</KEYWORD3>
+			<KEYWORD3>map</KEYWORD3>
+			<!--<KEYWORD3>reverse</KEYWORD3>-->
+			<KEYWORD3>sort</KEYWORD3>
+			<KEYWORD3>unpack</KEYWORD3>
+
+			<!-- Functions for real %HASHes -->
+			<KEYWORD3>delete</KEYWORD3>
+			<KEYWORD3>each</KEYWORD3>
+			<KEYWORD3>exists</KEYWORD3>
+			<KEYWORD3>keys</KEYWORD3>
+			<KEYWORD3>values</KEYWORD3>
+
+			<!-- Input and output functions -->
+			<KEYWORD3>binmode</KEYWORD3>
+			<KEYWORD3>close</KEYWORD3>
+			<KEYWORD3>closedir</KEYWORD3>
 			<KEYWORD3>dbmclose</KEYWORD3>
 			<KEYWORD3>dbmopen</KEYWORD3>
-			<KEYWORD3>defined</KEYWORD3>
-			<KEYWORD3>delete</KEYWORD3>
-			<KEYWORD3>die</KEYWORD3>
-			<KEYWORD3>dump</KEYWORD3>
-			<KEYWORD3>each</KEYWORD3>
-			<KEYWORD3>endgrent</KEYWORD3>
-			<KEYWORD3>endhostent</KEYWORD3>
-			<KEYWORD3>endnetent</KEYWORD3>
-			<KEYWORD3>endprotoent</KEYWORD3>
-			<KEYWORD3>endpwent</KEYWORD3>
-			<KEYWORD3>endservent</KEYWORD3>
+			<!--<KEYWORD3>die</KEYWORD3>-->
 			<KEYWORD3>eof</KEYWORD3>
-			<KEYWORD3>exec</KEYWORD3>
-			<KEYWORD3>exists</KEYWORD3>
-			<KEYWORD3>exp</KEYWORD3>
-			<KEYWORD3>fctnl</KEYWORD3>
 			<KEYWORD3>fileno</KEYWORD3>
 			<KEYWORD3>flock</KEYWORD3>
-			<KEYWORD3>fork</KEYWORD3>
 			<KEYWORD3>format</KEYWORD3>
-			<KEYWORD3>formline</KEYWORD3>
 			<KEYWORD3>getc</KEYWORD3>
-			<KEYWORD3>getgrent</KEYWORD3>
-			<KEYWORD3>getgrgid</KEYWORD3>
-			<KEYWORD3>getgrnam</KEYWORD3>
-			<KEYWORD3>gethostbyaddr</KEYWORD3>
-			<KEYWORD3>gethostbyname</KEYWORD3>
-			<KEYWORD3>gethostent</KEYWORD3>
-			<KEYWORD3>getlogin</KEYWORD3>
-			<KEYWORD3>getnetbyaddr</KEYWORD3>
-			<KEYWORD3>getnetbyname</KEYWORD3>
-			<KEYWORD3>getnetent</KEYWORD3>
-			<KEYWORD3>getpeername</KEYWORD3>
+			<KEYWORD3>print</KEYWORD3>
+			<KEYWORD3>printf</KEYWORD3>
+			<KEYWORD3>read</KEYWORD3>
+			<KEYWORD3>readdir</KEYWORD3>
+			<KEYWORD3>rewinddir</KEYWORD3>
+			<KEYWORD3>seek</KEYWORD3>
+			<KEYWORD3>seekdir</KEYWORD3>
+			<KEYWORD3>select</KEYWORD3>
+			<KEYWORD3>syscall</KEYWORD3>
+			<KEYWORD3>sysread</KEYWORD3>
+			<KEYWORD3>sysseek</KEYWORD3>
+			<KEYWORD3>syswrite</KEYWORD3>
+			<KEYWORD3>tell</KEYWORD3>
+			<KEYWORD3>telldir</KEYWORD3>
+			<KEYWORD3>truncate</KEYWORD3>
+			<KEYWORD3>warn</KEYWORD3>
+			<KEYWORD3>write</KEYWORD3>
+
+			<!-- Functions for fixed length data or records -->
+			<!--<KEYWORD3>pack</KEYWORD3>-->
+			<!--<KEYWORD3>read</KEYWORD3>-->
+			<!--<KEYWORD3>syscall</KEYWORD3>-->
+			<!--<KEYWORD3>sysread</KEYWORD3>-->
+			<!--<KEYWORD3>syswrite</KEYWORD3>-->
+			<!--<KEYWORD3>unpack</KEYWORD3>-->
+			<KEYWORD3>vec</KEYWORD3>
+
+			<!-- Functions for filehandles, files, or directories -->
+			<KEYWORD3>chdir</KEYWORD3>
+			<KEYWORD3>chmod</KEYWORD3>
+			<KEYWORD3>chown</KEYWORD3>
+			<KEYWORD3>chroot</KEYWORD3>
+			<KEYWORD3>fcntl</KEYWORD3>
+			<KEYWORD3>glob</KEYWORD3>
+			<KEYWORD3>ioctl</KEYWORD3>
+			<KEYWORD3>link</KEYWORD3>
+			<KEYWORD3>lstat</KEYWORD3>
+			<KEYWORD3>mkdir</KEYWORD3>
+			<KEYWORD3>open</KEYWORD3>
+			<KEYWORD3>opendir</KEYWORD3>
+			<KEYWORD3>readlink</KEYWORD3>
+			<KEYWORD3>rename</KEYWORD3>
+			<KEYWORD3>rmdir</KEYWORD3>
+			<KEYWORD3>stat</KEYWORD3>
+			<KEYWORD3>symlink</KEYWORD3>
+			<KEYWORD3>umask</KEYWORD3>
+			<KEYWORD3>unlink</KEYWORD3>
+			<KEYWORD3>utime</KEYWORD3>
+
+			<!-- Keywords related to the control flow of your perl program -->
+			<KEYWORD1>caller</KEYWORD1>
+			<KEYWORD1>continue</KEYWORD1>
+			<KEYWORD1>die</KEYWORD1>
+			<KEYWORD1>do</KEYWORD1>
+			<KEYWORD1>dump</KEYWORD1>
+			<KEYWORD1>eval</KEYWORD1>
+			<KEYWORD1>exit</KEYWORD1>
+			<KEYWORD1>goto</KEYWORD1>
+			<KEYWORD1>last</KEYWORD1>
+			<KEYWORD1>next</KEYWORD1>
+			<KEYWORD1>redo</KEYWORD1>
+			<KEYWORD1>return</KEYWORD1>
+			<KEYWORD1>sub</KEYWORD1>
+			<KEYWORD1>wantarray</KEYWORD1>
+
+			<!-- Keywords related to scoping -->
+			<!--<KEYWORD1>caller</KEYWORD1>-->
+			<!--<KEYWORD1>import</KEYWORD1>-->
+			<KEYWORD1>local</KEYWORD1>
+			<KEYWORD1>my</KEYWORD1>
+			<KEYWORD1>package</KEYWORD1>
+			<KEYWORD1>use</KEYWORD1>
+
+			<!-- Miscellaneous functions -->
+			<KEYWORD3>defined</KEYWORD3>
+			<!--<KEYWORD3>dump</KEYWORD3>-->
+			<!--<KEYWORD3>eval</KEYWORD3>-->
+			<KEYWORD3>formline</KEYWORD3>
+			<!--<KEYWORD3>local</KEYWORD3>-->
+			<!--<KEYWORD3>my</KEYWORD3>-->
+			<KEYWORD3>reset</KEYWORD3>
+			<KEYWORD3>scalar</KEYWORD3>
+			<KEYWORD3>undef</KEYWORD3>
+			<!--<KEYWORD3>wantarray</KEYWORD3>-->
+
+			<!-- Functions for processes and process groups -->
+			<KEYWORD3>alarm</KEYWORD3>
+			<KEYWORD3>exec</KEYWORD3>
+			<KEYWORD3>fork</KEYWORD3>
 			<KEYWORD3>getpgrp</KEYWORD3>
 			<KEYWORD3>getppid</KEYWORD3>
 			<KEYWORD3>getpriority</KEYWORD3>
-			<KEYWORD3>getprotobyname</KEYWORD3>
-			<KEYWORD3>getprotobynumber</KEYWORD3>
-			<KEYWORD3>getprotoent</KEYWORD3>
-			<KEYWORD3>getpwent</KEYWORD3>
-			<KEYWORD3>getpwnam</KEYWORD3>
-			<KEYWORD3>getpwuid</KEYWORD3>
-			<KEYWORD3>getservbyname</KEYWORD3>
-			<KEYWORD3>getservbyport</KEYWORD3>
-			<KEYWORD3>getservent</KEYWORD3>
+			<KEYWORD3>kill</KEYWORD3>
+			<KEYWORD3>pipe</KEYWORD3>
+			<KEYWORD3>setpgrp</KEYWORD3>
+			<KEYWORD3>setpriority</KEYWORD3>
+			<KEYWORD3>sleep</KEYWORD3>
+			<KEYWORD3>system</KEYWORD3>
+			<KEYWORD3>times</KEYWORD3>
+			<KEYWORD3>wait</KEYWORD3>
+			<KEYWORD3>waitpid</KEYWORD3>
+
+			<!-- Keywords related to perl modules -->
+			<!--<KEYWORD1>do</KEYWORD1>-->
+			<KEYWORD1>import</KEYWORD1>
+			<KEYWORD1>no</KEYWORD1>
+			<!--<KEYWORD1>package</KEYWORD1>-->
+			<KEYWORD1>require</KEYWORD1>
+			<!--<KEYWORD1>use</KEYWORD1>-->
+
+			<!-- Keywords related to classes and object-orientedness -->
+			<KEYWORD3>bless</KEYWORD3>
+			<!--<KEYWORD3>dbmclose</KEYWORD3>-->
+			<!--<KEYWORD3>dbmopen</KEYWORD3>-->
+			<!--<KEYWORD3>package</KEYWORD3>-->
+			<KEYWORD3>ref</KEYWORD3>
+			<KEYWORD3>tie</KEYWORD3>
+			<KEYWORD3>tied</KEYWORD3>
+			<KEYWORD3>untie</KEYWORD3>
+			<!--<KEYWORD3>use</KEYWORD3>-->
+
+			<!-- Low-level socket functions -->
+			<KEYWORD3>accept</KEYWORD3>
+			<KEYWORD3>bind</KEYWORD3>
+			<KEYWORD3>connect</KEYWORD3>
+			<KEYWORD3>getpeername</KEYWORD3>
 			<KEYWORD3>getsockname</KEYWORD3>
 			<KEYWORD3>getsockopt</KEYWORD3>
-			<KEYWORD3>glob</KEYWORD3>
-			<KEYWORD3>gmtime</KEYWORD3>
-			<KEYWORD3>grep</KEYWORD3>
-			<KEYWORD3>hex</KEYWORD3>
-			<KEYWORD3>import</KEYWORD3>
-			<KEYWORD3>index</KEYWORD3>
-			<KEYWORD3>int</KEYWORD3>
-			<KEYWORD3>ioctl</KEYWORD3>
-			<KEYWORD3>join</KEYWORD3>
-			<KEYWORD3>keys</KEYWORD3>
-			<KEYWORD3>kill</KEYWORD3>
-			<KEYWORD3>lcfirst</KEYWORD3>
-			<KEYWORD3>lc</KEYWORD3>
-			<KEYWORD3>length</KEYWORD3>
-			<KEYWORD3>link</KEYWORD3>
 			<KEYWORD3>listen</KEYWORD3>
-			<KEYWORD3>log</KEYWORD3>
-			<KEYWORD3>localtime</KEYWORD3>
-			<KEYWORD3>lstat</KEYWORD3>
-			<KEYWORD3>map</KEYWORD3>
-			<KEYWORD3>mkdir</KEYWORD3>
+			<KEYWORD3>recv</KEYWORD3>
+			<KEYWORD3>send</KEYWORD3>
+			<KEYWORD3>setsockopt</KEYWORD3>
+			<KEYWORD3>shutdown</KEYWORD3>
+			<KEYWORD3>socket</KEYWORD3>
+			<KEYWORD3>socketpair</KEYWORD3>
+
+			<!-- System V interprocess communication functions -->
 			<KEYWORD3>msgctl</KEYWORD3>
 			<KEYWORD3>msgget</KEYWORD3>
 			<KEYWORD3>msgrcv</KEYWORD3>
-			<KEYWORD3>no</KEYWORD3>
-			<KEYWORD3>oct</KEYWORD3>
-			<KEYWORD3>opendir</KEYWORD3>
-			<KEYWORD3>open</KEYWORD3>
-			<KEYWORD3>ord</KEYWORD3>
-			<KEYWORD3>pack</KEYWORD3>
-			<KEYWORD3>pipe</KEYWORD3>
-			<KEYWORD3>pop</KEYWORD3>
-			<KEYWORD3>pos</KEYWORD3>
-			<KEYWORD3>printf</KEYWORD3>
-			<KEYWORD3>print</KEYWORD3>
-			<KEYWORD3>push</KEYWORD3>
-			<KEYWORD3>quotemeta</KEYWORD3>
-			<KEYWORD3>rand</KEYWORD3>
-			<KEYWORD3>readdir</KEYWORD3>
-			<KEYWORD3>read</KEYWORD3>
-			<KEYWORD3>readlink</KEYWORD3>
-			<KEYWORD3>recv</KEYWORD3>
-			<KEYWORD3>ref</KEYWORD3>
-			<KEYWORD3>rename</KEYWORD3>
-			<KEYWORD3>reset</KEYWORD3>
-			<KEYWORD3>reverse</KEYWORD3>
-			<KEYWORD3>rewinddir</KEYWORD3>
-			<KEYWORD3>rindex</KEYWORD3>
-			<KEYWORD3>rmdir</KEYWORD3>
-			<KEYWORD3>scalar</KEYWORD3>
-			<KEYWORD3>seekdir</KEYWORD3>
-			<KEYWORD3>seek</KEYWORD3>
-			<KEYWORD3>select</KEYWORD3>
+			<KEYWORD3>msgsnd</KEYWORD3>
 			<KEYWORD3>semctl</KEYWORD3>
 			<KEYWORD3>semget</KEYWORD3>
+
 			<KEYWORD3>semop</KEYWORD3>
-			<KEYWORD3>send</KEYWORD3>
-			<KEYWORD3>setgrent</KEYWORD3>
-			<KEYWORD3>sethostent</KEYWORD3>
-			<KEYWORD3>setnetent</KEYWORD3>
-			<KEYWORD3>setpgrp</KEYWORD3>
-			<KEYWORD3>setpriority</KEYWORD3>
-			<KEYWORD3>setprotoent</KEYWORD3>
-			<KEYWORD3>setpwent</KEYWORD3>
-			<KEYWORD3>setsockopt</KEYWORD3>
-			<KEYWORD3>shift</KEYWORD3>
 			<KEYWORD3>shmctl</KEYWORD3>
 			<KEYWORD3>shmget</KEYWORD3>
 			<KEYWORD3>shmread</KEYWORD3>
 			<KEYWORD3>shmwrite</KEYWORD3>
-			<KEYWORD3>shutdown</KEYWORD3>
-			<KEYWORD3>sin</KEYWORD3>
-			<KEYWORD3>sleep</KEYWORD3>
-			<KEYWORD3>socket</KEYWORD3>
-			<KEYWORD3>socketpair</KEYWORD3>
-			<KEYWORD3>sort</KEYWORD3>
-			<KEYWORD3>splice</KEYWORD3>
-			<KEYWORD3>split</KEYWORD3>
-			<KEYWORD3>sprintf</KEYWORD3>
-			<KEYWORD3>sqrt</KEYWORD3>
-			<KEYWORD3>srand</KEYWORD3>
-			<KEYWORD3>stat</KEYWORD3>
-			<KEYWORD3>study</KEYWORD3>
-			<KEYWORD3>substr</KEYWORD3>
-			<KEYWORD3>symlink</KEYWORD3>
-			<KEYWORD3>syscall</KEYWORD3>
-			<KEYWORD3>sysopen</KEYWORD3>
-			<KEYWORD3>sysread</KEYWORD3>
-			<KEYWORD3>syswrite</KEYWORD3>
-			<KEYWORD3>telldir</KEYWORD3>
-			<KEYWORD3>tell</KEYWORD3>
-			<KEYWORD3>tie</KEYWORD3>
-			<KEYWORD3>tied</KEYWORD3>
+
+			<!-- Fetching user and group info -->
+			<KEYWORD3>endgrent</KEYWORD3>
+			<KEYWORD3>endhostent</KEYWORD3>
+			<KEYWORD3>endnetent</KEYWORD3>
+			<KEYWORD3>endpwent</KEYWORD3>
+			<KEYWORD3>getgrent</KEYWORD3>
+			<KEYWORD3>getgrgid</KEYWORD3>
+			<KEYWORD3>getgrnam</KEYWORD3>
+			<KEYWORD3>getlogin</KEYWORD3>
+			<KEYWORD3>getpwent</KEYWORD3>
+			<KEYWORD3>getpwnam</KEYWORD3>
+			<KEYWORD3>getpwuid</KEYWORD3>
+			<KEYWORD3>setgrent</KEYWORD3>
+			<KEYWORD3>setpwent</KEYWORD3>
+
+			<!-- Fetching network info -->
+			<KEYWORD3>endprotoent</KEYWORD3>
+			<KEYWORD3>endservent</KEYWORD3>
+			<KEYWORD3>gethostbyaddr</KEYWORD3>
+			<KEYWORD3>gethostbyname</KEYWORD3>
+			<KEYWORD3>gethostent</KEYWORD3>
+			<KEYWORD3>getnetbyaddr</KEYWORD3>
+			<KEYWORD3>getnetbyname</KEYWORD3>
+			<KEYWORD3>getnetent</KEYWORD3>
+			<KEYWORD3>getprotobyname</KEYWORD3>
+			<KEYWORD3>getprotobynumber</KEYWORD3>
+			<KEYWORD3>getprotoent</KEYWORD3>
+			<KEYWORD3>getservbyname</KEYWORD3>
+			<KEYWORD3>getservbyport</KEYWORD3>
+			<KEYWORD3>getservent</KEYWORD3>
+			<KEYWORD3>sethostent</KEYWORD3>
+			<KEYWORD3>setnetent</KEYWORD3>
+			<KEYWORD3>setprotoent</KEYWORD3>
+			<KEYWORD3>setservent</KEYWORD3>
+
+			<!-- Time-related functions -->
+			<KEYWORD3>gmtime</KEYWORD3>
+			<KEYWORD3>localtime</KEYWORD3>
 			<KEYWORD3>time</KEYWORD3>
-			<KEYWORD3>times</KEYWORD3>
-			<KEYWORD3>truncate</KEYWORD3>
-			<KEYWORD3>uc</KEYWORD3>
-			<KEYWORD3>ucfirst</KEYWORD3>
-			<KEYWORD3>umask</KEYWORD3>
-			<KEYWORD3>undef</KEYWORD3>
-			<KEYWORD3>unlink</KEYWORD3>
-			<KEYWORD3>unpack</KEYWORD3>
-			<KEYWORD3>unshift</KEYWORD3>
-			<KEYWORD3>untie</KEYWORD3>
-			<KEYWORD3>utime</KEYWORD3>
-			<KEYWORD3>values</KEYWORD3>
-			<KEYWORD3>vec</KEYWORD3>
-			<KEYWORD3>wait</KEYWORD3>
-			<KEYWORD3>waitpid</KEYWORD3>
-			<KEYWORD3>wantarray</KEYWORD3>
-			<KEYWORD3>warn</KEYWORD3>
-			<KEYWORD3>write</KEYWORD3>
+			<!--<KEYWORD3>times</KEYWORD3>-->
 		</KEYWORDS>
 	</RULES>
 
