@@ -15,6 +15,7 @@ error prevented 2.4pre2 from being installed properly.
 + Enhancements
 
 - Ruby mode updates (Mike Dillon)
+- Perl mode updates (Mike Dillon)
 - Syntax highlighting streamlined
 
 + Bug Fixes
@@ -24,7 +25,8 @@ error prevented 2.4pre2 from being installed properly.
   (since 2.4pre1)
 - The read only flag wasn't set on files (since 2.2 !!!)
 - Rule sets inherited the previous rule set's keyword map if no KEYWORDS
-  element was specified (since 2.4pre1)
+  element was specified (since 2.4pre2)
+- Fixed escape handling in delegates (Mike Dillon) (since 2.4pre2)
 
 + API Changes
 
